--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,8 @@ email-validator>=2.0,<3.0
 python-dotenv>=1.0,<2.0
 httpx>=0.24,<1.0
 pymysql==1.1.0
+pip install itsdangerous && pip freeze
+itsdangerous>=2.1,<3.0
+starlette>=0.34,<1.0
+bcrypt>=4.0,<5.0
+passlib[bcrypt]>=1.7,<2.0
